--- a/Dan_LVIII_Milos_Peric/Dan_LVIII_Milos_Peric/MainWindow.xaml
+++ b/Dan_LVIII_Milos_Peric/Dan_LVIII_Milos_Peric/MainWindow.xaml
@@ -9,7 +9,7 @@
 
     <Window.Resources>
         <Style TargetType="Button">
-            <Setter Property="Background" Value="#FFD7FAE4" />
+            <Setter Property="Background" Value="LightCyan" />
             <Setter Property="BorderThickness" Value="0.5" />
             <Setter Property="FontSize" Value="70" />
             <Setter Property="Foreground" Value="#FF6572B0" />
@@ -27,19 +27,22 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <Button Click="Button_Click" x:Name="button1" Grid.Column="0" Grid.Row="0" Content="?"/>
-        <Button Click="Button_Click" x:Name="button2" Grid.Column="1" Grid.Row="0" Content="?"/>
-        <Button Click="Button_Click" x:Name="button3" Grid.Column="2" Grid.Row="0" Content="?"/>
+        <Button Click="Button_Click" x:Name="button1" Grid.Column="0" Grid.Row="0" Content="?" Tag="play"/>
+        <Button Click="Button_Click" x:Name="button2" Grid.Column="1" Grid.Row="0" Content="?" Tag="play"/>
+        <Button Click="Button_Click" x:Name="button3" Grid.Column="2" Grid.Row="0" Content="?" Tag="play"/>
 
-        <Button Click="Button_Click" x:Name="button4" Grid.Column="0" Grid.Row="1" Content="?"/>
-        <Button Click="Button_Click" x:Name="button5" Grid.Column="1" Grid.Row="1" Content="?"/>
-        <Button Click="Button_Click" x:Name="button6" Grid.Column="2" Grid.Row="1" Content="?"/>
+        <Button Click="Button_Click" x:Name="button4" Grid.Column="0" Grid.Row="1" Content="?" />
+        <Button Click="Button_Click" x:Name="button5" Grid.Column="1" Grid.Row="1" Content="?" />
+        <Button Click="Button_Click" x:Name="button6" Grid.Column="2" Grid.Row="1" Content="?" />
 
-        <Button Click="Button_Click" x:Name="button7" Grid.Column="0" Grid.Row="2" Content="?"/>
-        <Button Click="Button_Click" x:Name="button8" Grid.Column="1" Grid.Row="2" Content="?"/>
-        <Button Click="Button_Click" x:Name="button9" Grid.Column="2" Grid.Row="2" Content="?"/>
-
+        <Button Click="Button_Click" x:Name="button7" Grid.Column="0" Grid.Row="2" Content="?" />
+        <Button Click="Button_Click" x:Name="button8" Grid.Column="1" Grid.Row="2" Content="?" />
+        <Button Click="Button_Click" x:Name="button9" Grid.Column="2" Grid.Row="2" Content="?" />
+        <TextBlock x:Name="tb1" Grid.Column="2" Grid.Row="3" FontSize="14" Text="Computer Wins: 0" FontWeight="Bold" Background="LightSeaGreen"></TextBlock>
+        <TextBlock x:Name="tb2" Grid.Column="0" Grid.Row="3" FontSize="14" Text="Player Wins: 0" FontWeight="Bold" Background="LightSeaGreen"></TextBlock>
+        <Button Click="button10_Click" x:Name="button10" Grid.Column="1" Grid.Row="3" Content="Reset Game" FontSize="14" Background="LightSeaGreen" Foreground="Black" FontWeight="Bold"/>
     </Grid>
 </Window>
